test_cases/negative/recursion.snek
def Foo(value) {
    return Foo(value);
}

export DEFAULT = Foo(10);
